crates/eventric-domain/tests/ui/projection_duplicate_selection.stderr
error: duplicate selection `dup`
 --> tests/ui/projection_duplicate_selection.rs:6:5
  |
6 |     dup: { events: [B] },
  |     ^^^
